// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableSection 1`] = `
<div
  className="pf-c-expandable-section"
>
  <button
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <AngleRightIcon
      aria-hidden={true}
      className="pf-c-expandable-section__toggle-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={true}
  >
    test 
  </div>
</div>
`;

exports[`Renders ExpandableSection expanded 1`] = `
<div
  className="pf-c-expandable-section pf-m-expanded"
>
  <button
    aria-expanded={true}
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <AngleRightIcon
      aria-hidden={true}
      className="pf-c-expandable-section__toggle-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={false}
  >
     test 
  </div>
</div>
`;

exports[`Renders Uncontrolled ExpandableSection 1`] = `
<div
  className="pf-c-expandable-section"
>
  <button
    className="pf-c-expandable-section__toggle"
    onClick={[Function]}
    type="button"
  >
    <AngleRightIcon
      aria-hidden={true}
      className="pf-c-expandable-section__toggle-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
    <span>
      Show More
    </span>
  </button>
  <div
    className="pf-c-expandable-section__content"
    hidden={true}
  >
     test 
  </div>
</div>
`;
